--- a/crates/zeta2/Cargo.toml
+++ b/crates/zeta2/Cargo.toml
@@ -25,6 +25,7 @@ cloud_zeta2_prompt.workspace = true
 collections.workspace = true
 edit_prediction.workspace = true
 edit_prediction_context.workspace = true
+editor.workspace = true
 feature_flags.workspace = true
 futures.workspace = true
 gpui.workspace = true
